--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -137,7 +137,8 @@
                 <!-- <div class="meta"><span class="pr-5">By</span> <a href="/authors/{{ $author | urlize }}"> {{ $author }} </a></div> -->
 
                   <div class="user-info">
-                    <img src="/assets/images/authors/{{ $author | urlize}}.jpg" alt="author" width="20" height="20"
+                    <img src="/assets/images/authors/profile-photos-28x28/{{ $author | urlize}}.jpg" alt="author"
+                      width="20" height="20"
                       loading="lazy" decoding="async">
                     <h6 class="mr-12"> {{ $author }}</h6>
                   </div>
