--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -248,10 +248,10 @@ a.inline-button {
 .user-info {
   display: flex;
   margin-bottom: 8px;
-
+  align-items: center;
   img {
-    width: 18px;
-    height: 18px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
     margin-right: 12px;
   }
