--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -10486,7 +10486,7 @@ Responsive Classes
 
 .recent-blog-posts {
   background-color: #f2f5f7;
-  padding: 40px 0 80px;
+  padding: 40px 0 50px;
 }
 
 .author {
@@ -10499,7 +10499,7 @@ Responsive Classes
   width: 80px;
   height: 80px;
   margin-right: 16px;
-  border: 3px solid #e7e7f9;
+  border: 2px solid rgba(255, 255, 255, 0.1);
   overflow: hidden;
 }
 
@@ -10630,7 +10630,7 @@ a.inline-button i.fa {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 130%;
+  line-height: 150%;
   color: #1c1c1c;
   margin-bottom: 16px;
   letter-spacing: 0;
@@ -11079,7 +11079,7 @@ ul.social-share-button li a i.fa {
 .single-blog h2 {
   font-weight: 500;
   font-size: 18px;
-  line-height: 130%;
+  line-height: 150%;
   margin-bottom: 15px;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
@@ -11115,7 +11115,7 @@ ul.social-share-button li a i.fa {
 .blog-items .blog-title-content h2 {
   font-weight: 500;
   font-size: 24px;
-  line-height: 130%;
+  line-height: 150%;
   letter-spacing: -0.5px;
   margin-bottom: 15px;
 }
