--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -284,14 +284,13 @@
         </div>
         <!-- left sidebar end -->
       </div>
-      <div class="column is-9">
+      <div class="column is-7">
         <div class="blog-items">
           <!-- grid view start -->
-          <div class="columns is-variable is-1-mobile is-1-tablet is-1-desktop is-1-widescreen is-2-fullhd is-multiline"
-            id="grid-view">
+          <div id="grid-view">
             {{ range $idx, $p := $pages.ByDate.Reverse }}
 
-            <div class="column is-7 each-blog">
+            <div class="each-blog">
 
               <a href="{{ $p.RelPermalink }}" class="single-blog-card list-view">
                 <div class="user-info">
