--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,7 +26,7 @@
 
           <div class="column is-5">
             <!-- is-justify-content-flex-end  -->
-              <div class="is-flex is-justify-content-flex-end ml-20">
+              <div class="is-flex ml-20">
                 <!-- author start  -->
                 {{ range $author := .Params.authors }}
                 <div class="author ml-10">
@@ -111,7 +111,7 @@
       <div class="column is-4">
         <div class="wizerd-items">
           <div class="single-wizard ml-30">
-            <h6 class="section-title-small mb-20"><span class="icon-square"></span>RECENT BLOG POSTS </h6>
+            <h6 class="section-title-small mb-20">RECENT BLOG POSTS </h6>
             {{ range first 5 (where site.RegularPages.ByDate.Reverse "Type" "in" "posts" )}}
             <!-- recent-blog  -->
             <div class="single-recent-blog">
@@ -119,7 +119,7 @@
               <div class="recent-blog-content">
                 <!-- date  -->
                  <div class="date-meta is-flex is-align-items-center">
-                  <div class="width-20 mr-8 has-text-grey"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                  <div class="width-18 mr-8 has-text-grey"><svg xmlns="http://www.w3.org/2000/svg" fill="none"
                       viewBox="0 0 24 24"
                       stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                       <path stroke-linecap="round" stroke-linejoin="round"
@@ -134,27 +134,25 @@
 
                
                 <!-- <div class="meta"><span class="pr-5">By</span> <a href="/authors/{{ $author | urlize }}"> {{ $author }} </a></div> -->
-
+                 <a href="/authors/{{ $author | urlize }}">
                   <div class="user-info">
                     <img src="/assets/images/authors/profile-photos-28x28/{{ $author | urlize}}.jpg" alt="author"
                       width="20" height="20"
                       loading="lazy" decoding="async">
                     <h6 class="mr-12"> {{ $author }}</h6>
                   </div>
-
+                  </a>
                 {{ end }}
               </div>
               <!-- content  -->
             </div>
             <!-- recent-blog  -->
             {{ end }}
-
-
           </div>
 
 
-          <div class="single-wizard ml-30">
-            <h6 class="section-title-small mb-20"><span class="icon-square"></span>POPULAR TAGS </h6>
+          <div class="single-wizard ml-30 mt-30">
+            <h6 class="section-title-small mb-20">POPULAR TAGS </h6>
             <div class="tags">
               {{ range $tag := .Params.tags }}
               <a href="/tags/{{ . }}" class="tag">{{ . }}</a>
