--- a/static/assets/sass/layouts/_author.scss
+++ b/static/assets/sass/layouts/_author.scss
@@ -3,7 +3,11 @@
   margin-top: -74px;
   padding: 100px 0 100px;
 }
-
+.author-content {
+  figure {
+    margin: 0 auto 15px;
+  }
+}
 .author-page {
   .blog-items {
     margin-top: 16px;
