--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -4,14 +4,14 @@
 <!-- author hero area start  -->
 <section class="author-hero-area">
   <div class="container">
-    <div class="columns">
+    <div class="columns is-centered">
       <div class="column is-8">
-        <div class="author-content" data-aos="fade-up" data-aos-duration="500">
+        <div class="author-content has-text-centered" data-aos="fade-up" data-aos-duration="500">
           <figure class="image width-80">
-            <img src="{{ $author.profile }}" loading="lazy" decoding="async" />
+            <img src="{{ $author.profile }}" loading="lazy" class="is-rounded" decoding="async" />
           </figure>
-          <h3 class="has-text-white" data-aos="fade-up" data-aos-duration="600">{{ $author.name }}</h3>
-          <p class="has-text-white" data-aos="fade-up" data-aos-duration="800">
+          <h4 class="has-text-white mb-8" data-aos="fade-up" data-aos-duration="600">{{ $author.name }}</h4>
+          <p class="has-text-white mb-16" data-aos="fade-up" data-aos-duration="800">
             {{ $author.biography }}
           </p>
           <div class="social-share">
